--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,20 @@
     <h1>Contact Details </h1>
     <p> Name: Jeet Patel </p>
     <p> Email: jeetp0619@gmail.com</p>
+
+    <hr>
+
+    <form  action="mailto:jeetp0619@gmail.com" method="post" enctype="text/plain">
+        <label>Your Name:</label>
+        <input type="text" name="Your Name:" value=""> <br>
+
+        <label for=""> Your Email:</label>
+        <input type="email" name="Your Email:" value=""><br>
+
+        <label for="">Your Message:</label><br>
+        <textarea name="Your Message:" id="" cols="30" rows="10"></textarea><br>
+        <input type="submit" name="">
+    </form>
 </body>
 
 </html>
