--- a/index.html
+++ b/index.html
@@ -7,17 +7,22 @@
 </head>
 
 <body>
-    <img src="jeet-modified.png" alt="jeet profile picture">
-    <h1> Jeet Patel </h1>
-    <p><em>College Student at <strong><a
-                    href="https://www.csulb.edu/college-of-engineering/computer-engineering-computer-science">California
-                    State University Long Beach</a></strong></em></p>
-
-    <p>
-        I am a College Student trying to enter the Web Development and Software Developemnt industry.<br>
-        This website was built using my basic knowledge of <em><strong>HTML 5</strong></em>.
-        I will post more of my experience on my GitHub.
-    </p>
+    <table cellspacing="20 ">
+        <tr> 
+            <td><img src="jeet-modified.png" alt="jeet profile picture"></td>
+            <td>
+                <h1> Jeet Patel </h1>
+                <p><em>College Student at <strong><a href="https://www.csulb.edu/college-of-engineering/computer-engineering-computer-science">
+                    California State University Long Beach</a></strong></em>
+                </p>
+                <p>
+                    I am a College Student trying to enter the Web Development and Software Developemnt industry.<br>
+                    This website was built using my basic knowledge of <em><strong>HTML 5</strong></em>.
+                    I will post more of my experience on my GitHub.
+                </p>
+            </td>
+        </tr>
+    </table>
 
     <hr>
 
@@ -63,6 +68,54 @@
             </ul>
         </ul>
     </ul>
+    
+    <br>
+<hr>
+    <h3>Work Experience</h3>
+    <table cellspacing="10">
+        <thead>
+            <tr>
+                <th> Dates </th>
+                <th> Work</th>
+
+            </tr>
+        </thead>
+        <tr>
+            <td>2021</td>
+            <td> Jr. Analyst at Ventura Pranas</td>
+        </tr>
+    </table>
+    <hr>
+    <h3> Skills ⭐</h3>
+    <table cellspacing="10">
+        <tr>
+            <td> 
+                <table>
+                    <tr>
+                        <td> Python</td>
+                        <td>⭐⭐⭐</td></td>
+                    </tr>
+                    <tr>
+                        <td>Java</td>
+                        <td>⭐⭐⭐</td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table>
+                    <tr>
+                        <td> Web Developemnt</td>
+                        <td>⭐</td></td>
+                    </tr>
+                    <tr>
+                        <td>Database Management</td>
+                        <td>⭐</td>
+                    </tr>
+                </table>
+            </td>
+    </table>
+
+    <hr>
 
     <a href="hobbies.html"><h3>My Hobbies</h3></a>
     <a href="contact.html"><h3> Contact Me </h3></a>
