--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>💯 Jeet's Personal Website</title>
+    <link rel="stylesheet" href="css/styles.css">
+    
+
+
 </head>
 
 <body>
