--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <table cellspacing="20 ">
         <tr> 
-            <td><img src="jeet-modified.png" alt="jeet profile picture"></td>
+            <td><img src="images/jeet-modified.png" alt="jeet profile picture"></td>
             <td>
                 <h1> Jeet Patel </h1>
                 <p><em>College Student at <strong><a href="https://www.csulb.edu/college-of-engineering/computer-engineering-computer-science">
